# maelstrom

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  compose.dev.yml  compose.prod.yml
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  deploy.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260623_0001_initial.py  20260624_0002_market_data.py  20260625_0003_strategies.py  20260626_0004_trading.py  20260627_0005_risk.py  20260628_0006_llm.py  20260629_0007_signals.py  20260630_0008_notifications.py  20260701_0009_funding.py  20260702_0010_scanner_config.py  20260703_0011_alerts.py  20260704_0012_shadow_live.py  20260705_0013_scanner_prompt.py  20260706_0014_live_events.py  20260707_0015_watchlist.py  20260708_0016_strategy_notes.py
apps/api/src/maelstrom_api/: audit.py  auth.py  config.py  crypto.py  db.py  hyperliquid_info.py  logging_config.py  main.py  notify.py  schemas.py  totp.py
apps/api/src/maelstrom_api/llm/: __init__.py  pricing.py  prompts.py  router.py
apps/api/src/maelstrom_api/models/: __init__.py  audit.py  llm.py  market.py  notification.py  signal.py  strategy.py  trading.py  user.py
apps/api/src/maelstrom_api/routes/: accounts.py  admin.py  ai.py  alerts.py  backtests.py  health.py  live_strategies.py  markets.py  notifications.py  research.py  signals.py  strategies.py  watchlist.py  ws_markets.py
apps/api/src/maelstrom_api/schemas/: __init__.py  backtest.py  credentials.py  live_strategy.py  llm.py  market.py  notification.py  research.py  signal.py  strategy.py  trading.py  users.py
apps/api/tests/: conftest.py  test_health.py  test_research_math.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: account-switcher.tsx  code-editor.tsx  sidebar.tsx  symbol-autocomplete.tsx
apps/web/src/components/backtests/: diagnostics-card.tsx  equity-chart.tsx  optimize-dialog.tsx  sweep-curve.tsx
apps/web/src/components/dashboard/: overview.tsx  setup-checklist.tsx
apps/web/src/components/markets/: backfill-button.tsx  bulk-backfill-dialog.tsx  candle-chart.tsx  chart-panel.tsx  instrument-list.tsx  use-bar-stream.ts
apps/web/src/components/portfolio/: account-equity-chart.tsx  credentials-form.tsx  new-account-dialog.tsx  pnl-attribution-card.tsx
apps/web/src/components/research/: correlation-matrix.tsx  funding-chart.tsx  stats-card.tsx
apps/web/src/components/settings/: notifications-card.tsx
apps/web/src/components/signals/: backtest-signal-button.tsx  scanner-control.tsx
apps/web/src/components/strategies/: ai-generate-dialog.tsx  backtest-form.tsx  backtest-list.tsx  dry-run-button.tsx  live-list.tsx  params-form.tsx  run-live-form.tsx  sdk-reference.tsx  sweep-form.tsx  version-diff-dialog.tsx
apps/web/src/lib/: ai.ts  api.ts  auth.ts  backtests.ts  current-account.ts  live-strategies.ts  markets.ts  notifications.ts  research.ts  signals.ts  strategies.ts  strategy-templates.ts  trading.ts  watchlist.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/maelstrom_worker/: alerts.py  crypto.py  funding.py  llm.py  main.py  notify.py  risk.py  scanner.py  settings.py  streams.py  tasks.py
apps/worker/src/maelstrom_worker/broker/: __init__.py  base.py  hyperliquid.py  paper.py  shadow.py
apps/worker/src/maelstrom_worker/connectors/: __init__.py  base.py  binance.py  hyperliquid.py  registry.py
apps/worker/src/maelstrom_worker/engine/: __init__.py  metrics.py  runner.py  sdk.py  types.py
apps/worker/src/maelstrom_worker/live/: __init__.py  manager.py  runner.py
apps/worker/tests/: test_scanner_parse.py  test_sdk_parity.py
docs/: operations.md  roadmap.md  strategy-sdk.md  test-backlog.md
infra/: bootstrap.sh
infra/backup/: Dockerfile  run.sh
infra/caddy/: Caddyfile
infra/scripts/: healthcheck.sh  kill-switch.sh  restore.sh  rollback.sh
(+22 files in other folders)
