[project]
name = "maelstrom-api"
version = "0.0.1"
description = "Maelstrom HTTP/WebSocket API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "fastapi-users[sqlalchemy]>=14.0",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "qrcode[pil]>=8.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "structlog>=24.4",
    "orjson>=3.10",
    "pynacl>=1.5",
    "arq>=0.26",
    "redis>=5.2",
    "limits>=4.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "types-pyotp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maelstrom_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "C4", "UP", "N", "S", "A", "RET", "SIM", "PT",
    "RUF", "ASYNC", "TID",
]
ignore = ["S101"]  # pytest uses assert

[tool.ruff.lint.flake8-bugbear]
# FastAPI's canonical pattern uses Depends/Query/etc in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Form",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]
"alembic/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
