[project]
name = "maelstrom-worker"
version = "0.0.1"
description = "Maelstrom background workers (data ingest, backtests, strategies)"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.28",
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maelstrom_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend = "../api/pyproject.toml"

[tool.mypy]
python_version = "3.12"
strict = true
